# Audex-Mac

./: .gitignore  LICENSE  PATCH.md  README.md  compare-quant.sh  compare-voices.sh  pyproject.toml  sound.sh  start.sh  vendor_pins.json
.githooks/: pre-commit
.github/: pull_request_template.md
audex_mac/: __init__.py  audio_components.py  audio_contract.py  audio_encoder.py  audio_evaluation.py  audio_evaluation_adapters.py  audio_evaluation_ast.py  audio_evaluation_ast_backend.py  audio_evaluation_ast_labels.py  audio_evaluation_ast_worker.py  audio_evaluation_clap.py  audio_evaluation_clap_backend.py  audio_evaluation_clap_worker.py  audio_evaluation_cli.py  audio_evaluation_datasets.py  audio_evaluation_enhancement.py  audio_evaluation_esc50.py  audio_evaluation_generation.py  audio_evaluation_hf.py  audio_evaluation_openl3.py  audio_evaluation_openl3_backend.py  audio_evaluation_openl3_staging.py  audio_evaluation_openl3_worker.py  audio_evaluation_oracles.py  audio_evaluation_runner.py  audio_evaluation_suite.py  audio_evaluation_targets.py  audio_evaluation_worker_pipeline.py  audio_evaluation_xcodec.py  audio_features.py  audio_model_resolver.py  audio_pcm.py  audio_projector.py  audio_runtime.py  audio_splice.py  bootstrap.py  checkpoints.py  cli.py  config_values.py  conversations.py  (+33 more)
benchmarks/: text_conversation.json
docs/: README.md
features/: licensing.feature  model_selection.feature  no_extra_models.feature  patch_guards.feature  speech_to_speech_cli.feature  startup.feature  text_benchmark.feature
personas/: assistant.md
scripts/: lint.sh  (+15 more)
(+120 files in other folders)
